# dataseal

./: .gitignore  Cargo.toml  README.md
release/latest/download/: dataseal
src/: main.rs
src/cli/: help_document.rs  mod.rs  repl.rs  validate_args.rs
src/cli/commands/: auth_commands.rs  file_commands.rs  folder_commands.rs  fs_commands.rs  mod.rs  nested_db.rs  pass_commands.rs  system_commands.rs  utils.rs
src/db/: ,  auth.rs  config.rs  data_encryption.rs  enc_keys.rs  files.rs  folders.rs  instance.rs  mod.rs  nested_db.rs  passwords.rs  recycle.rs  save.rs  search.rs  stats.rs  structs.rs  time.rs
src/gui/: main.rs
