[package]
name = "rust-first-project"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
argon2 = "0.5.3"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
chrono = "0.4.41"
clap = { version = "4.5.47", features = ["derive"] }
colored = "3.0.0"
pbkdf2 = "0.12.2"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sha2 = "0.10.9"
