[package]
name = "dataseal"
version = "0.1.0"
description = "A mini CLI database with optional GUI"
edition = "2024"
license = "MIT"
repository = "https://github.com/FARHANALI-ALI-RAJPOOT/dataseal"

[dependencies]
aes = "0.8.4"
aes-gcm-siv = "0.11.1"
argon2 = "0.5.3"
base64 = "0.22.1"
chacha20poly1305 = { version = "0.10.1" }
chrono = "0.4.41"
clap = { version = "4.5.47", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
pathdiff = "0.2.3"
pbkdf2 = "0.12.2"
rand = "0.9.2"
rpassword = "7.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sha2 = "0.10.9"
terminal_size = "0.4.3"



